<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_two"
    tools:context="com.example.android.abasketballgame.MainActivity">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/main_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:id="@+id/left_linear_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/team_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/team_a"
                    android:textAlignment="center"
                    android:textColor="@color/lightBrown"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="18dp"
                    android:text="@string/_0"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="50sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@color/orange_red"
                    android:onClick="three_points_A"
                    android:text="@string/three_points"
                    android:textAllCaps="true"
                    android:textSize="18sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@color/o"
                    android:onClick="two_points_A"
                    android:text="@string/two_points"
                    android:textAllCaps="true"
                    android:textSize="18sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/orange"
                    android:onClick="one_point_A"
                    android:text="@string/free_throw"
                    android:textAllCaps="true"
                    android:textSize="18sp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/right_linear_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/team_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/team_b"
                    android:textAlignment="center"
                    android:textColor="@color/lightBrown"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="18dp"
                    android:text="@string/_0"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="50sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@color/orange_red"
                    android:onClick="three_points_B"
                    android:text="@string/three_points"
                    android:textAllCaps="true"
                    android:textSize="18sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@color/o"
                    android:onClick="two_points_B"
                    android:text="@string/two_points"
                    android:textAllCaps="true"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/free_throw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/orange"
                    android:onClick="one_point_B"
                    android:text="@string/free_throw"
                    android:textAllCaps="true"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>


        <Button
            android:id="@+id/end_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="38dp"
            android:background="@color/light_orange"
            android:onClick="EndGame"
            android:text="@string/end_game"
            android:textAllCaps="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_linear_layout" />

        <Button
            android:layout_width="82dp"
            android:layout_height="42dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="64dp"
            android:background="@color/red2"
            android:onClick="ResetScore"
            android:padding="8dp"
            android:text="@string/reset"
            android:textAllCaps="true"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/main_linear_layout"
            app:layout_constraintTop_toBottomOf="@id/end_game" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="120dp"
            android:layout_height="114dp"
            android:rotation="-35"
            android:src="@drawable/basketball"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ContentDescription" />


    </android.support.constraint.ConstraintLayout>

</ScrollView>





